--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,9 +48,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13637"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(prophet)"
    ]
@@ -65,15 +76,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# tu codigo aquí"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -82,11 +84,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# tu codigo aquí"
+    "prophet = prophet[568:]"
    ]
   },
   {
@@ -100,21 +102,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import re\n",
+    "\n",
+    "ref_pattern = re.compile(r\"\\{\\d+\\}\")\n",
+    "\n",
     "def referencia(x):\n",
     "    '''\n",
     "    Entrada: Una cadena\n",
     "    Salida: La cadena con las referencias eliminadas\n",
-    "    \n",
+    "\n",
     "    Ejemplo:\n",
     "    Entrada: 'the{7}'\n",
     "    Salida: 'the'\n",
     "    '''\n",
-    "    \n",
-    "    # tu código aquí"
+    "    return ref_pattern.sub(\"\", x)\n",
+    "\n",
+    "\n",
+    "assert referencia(\"the{7}\") == \"the\""
    ]
   },
   {
@@ -126,11 +134,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# tu codigo aquí"
+    "# I need to use list() to obtain the expected result of a map, weird...\n",
+    "assert list(map(referencia, [\"the{7}\", \"fox\", \"keeps{66}\", \"walking\"])) == [\"the\", \"fox\", \"keeps\", \"walking\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prophet_reference = list(map(referencia, prophet))"
    ]
   },
   {
@@ -142,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,13 +168,15 @@
     "    '''\n",
     "    Entrada: Una cadena\n",
     "    Salida: Una lista de cadenas divididas en el carácter de salto de línea (\\n)\n",
-    "        \n",
+    "\n",
     "    Ejemplo:\n",
     "    Entrada: 'the\\nbeloved'\n",
     "    Salida: ['the', 'beloved']\n",
     "    '''\n",
-    "    \n",
-    "    # tu código aquí"
+    "    return x.split(\"\\n\")\n",
+    "\n",
+    "\n",
+    "assert salto_de_linea(\"the\\nfox\\nkeeps\\nwalking\") == [\"the\", \"fox\", \"keeps\", \"walking\"]"
    ]
   },
   {
@@ -168,13 +188,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "# tu codigo aquí"
+    "# I need to use list() to obtain the expected result of a filter, weird...\n",
+    "assert list(map(salto_de_linea, [\"the\\nfox\", \"keeps\\nwalking\"])) == [[\"the\", \"fox\"], [\"keeps\", \"walking\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prophet_line = list(map(salto_de_linea, prophet_reference))"
    ]
   },
   {
@@ -186,21 +216,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
-    "prophet_flat = [i for sub in prophet_line for i in sub]\n",
-    "prophet_flat"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# tu codigo aquí"
+    "prophet_flat = [i for sub in prophet_line for i in sub]"
    ]
   },
   {
@@ -214,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,19 +243,25 @@
     "    Entrada: Una cadena\n",
     "    Salida: Verdadero si la palabra no está en la lista especificada \n",
     "    y Falso si la palabra está en la lista.\n",
-    "        \n",
+    "\n",
     "    Ejemplo:\n",
     "    lista de palabras = ['and', 'the']\n",
     "    Entrada: 'and'\n",
     "    Salida: FALSE\n",
-    "    \n",
+    "\n",
     "    Entrada: 'John'\n",
     "    Salida: TRUE\n",
     "    '''\n",
-    "    \n",
     "    lista_palabras = ['and', 'the', 'a', 'an']\n",
-    "    \n",
-    "    # tu código aquí"
+    "    for word in lista_palabras:\n",
+    "        if word == x:\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
+    "\n",
+    "assert not filtro_palabra(\"and\")\n",
+    "assert filtro_palabra(\"John\")\n",
+    "assert filtro_palabra(\"walking\")"
    ]
   },
   {
@@ -247,13 +273,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 126,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "# tu codigo aquí"
+    "assert list(filter(filtro_palabra, [\"the\", \"fox\", \"keeps\", \"walking\"])) == [ \"fox\", \"keeps\", \"walking\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prophet_filter = list(filter(filtro_palabra, prophet_flat))"
    ]
   },
   {
@@ -267,17 +302,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
     "def word_filter_case(x):\n",
-    "   \n",
     "    word_list = ['and', 'the', 'a', 'an']\n",
-    "    \n",
-    "    # your code here\n",
-    "    counting = sum([x.lower().count(i) for i in word_list])\n",
-    "    return False if counting > 0 else True"
+    "\n",
+    "    for word in word_list:\n",
+    "        if word == x.lower():\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
+    "\n",
+    "assert list(filter(word_filter_case, [\"The\", \"fox\", \"keeps\", \"walking\"])) == [ \"fox\", \"keeps\", \"walking\"]"
    ]
   },
   {
@@ -293,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,19 +344,10 @@
     "    Entrada: 'John', 'Smith'\n",
     "    Salida: 'John Smith'\n",
     "    '''\n",
-    "    \n",
-    "    # tu código aquí"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "# tu código aquí"
+    "    return reduce(lambda a, b: f\"{a} {b}\", [a, b])\n",
+    "\n",
+    "\n",
+    "assert concatenar_espacio(\"John\", \"Smith\") == \"John Smith\""
    ]
   },
   {
@@ -330,11 +359,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# tu código aquí"
+    "test_str = [\"the\", \"fox\", \"keeps\", \"walking\"]\n",
+    "assert reduce(concatenar_espacio, test_str) == \"the fox keeps walking\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prophet_string = reduce(concatenar_espacio, prophet_filter)"
    ]
   }
  ],
@@ -354,9 +393,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
